--- a/_config.yml
+++ b/_config.yml
@@ -216,19 +216,19 @@ collections:
 # -----------------------------------------------------------------------------
 
 # Markdown and syntax highlight
-markdown: kramdown
-highlighter: rouge
-highlight_theme_light: github  # https://github.com/jwarby/jekyll-pygments-themes
-highlight_theme_dark: native  # https://github.com/jwarby/jekyll-pygments-themes
-kramdown:
-  input: GFM
-  syntax_highlighter_opts:
-    css_class: 'highlight'
-    span:
-      line_numbers: false
-    block:
-      line_numbers: false
-      start_line: 1
+# markdown: kramdown
+# highlighter: rouge
+# highlight_theme_light: github  # https://github.com/jwarby/jekyll-pygments-themes
+# highlight_theme_dark: native  # https://github.com/jwarby/jekyll-pygments-themes
+# kramdown:
+#   input: GFM
+#   syntax_highlighter_opts:
+#     css_class: 'highlight'
+#     span:
+#       line_numbers: false
+#     block:
+#       line_numbers: false
+#       start_line: 1
 
 # Includes & excludes
 include: ['_pages']
