--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,12 @@ collections:
     output: true
     permalink: /news/:path/
     # limit: 5
+  experience:
+    defaults:
+      layout: post
+    output: true
+    permalink: /experience/:path/
+    # limit: 5
   education:
     defaults:
       layout: post
