--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Hunmin
 middle_name: 
 last_name: Yang
-email: hmyang@kaist.ac.kr
+email: hunmin.yang1@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -73,7 +73,7 @@ x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: hunminyang # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: Ze2iaMEAAAAJ # your Google Scholar ID
+scholar_userid: mDxJj2AAAAAJ # your Google Scholar ID Ze2iaMEAAAAJ (for hunmin.yang1@gmail.com)
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
